--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <header>
-            <nav>
+            <nav class="navigation">
                 <a href="#"></a>
                 <a href="#"></a>
                 <a href="#"></a>
@@ -29,7 +29,7 @@
 
         <section class="cta">
             <div class="cta-text">
-                <h1></h1>
+                <h1 ></h1>
                 <button></button>
             </div>
             <img id="cta-img" src="" alt="Image of a code snippet.">
@@ -71,7 +71,7 @@
 
             <h4></h4>
 
-            <p></p>
+            <p ></p>
 
             <p></p>
 
